kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-mock
  annotations:
    cert-manager.io/issuer: "cloudflare-letsencrypt"
spec:
  ingressClassName: nginx
  rules:
  - host: jef.diadecloud.com
    http:
      paths:
      - backend:
          service:
            name: backend-mock
            port:
              number: 80
        path: /
        pathType: Exact
